# composite-indicators

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
composite_indicators/: aggregation.py  base.py  concordance.py  drawing.py
examples/: aggregation.ipynb
examples.py/: circles.ipynb  diabets.ipynb
tests/: test_aggregation.py  test_base.py  test_concordance.py
