[tool.poetry]
name = "composite-indicators"
version = "0.1.0"
description = ""
authors = ["Klym Yamkovyi <yamkovou@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "composite_indicators"}]

[tool.poetry.dependencies]
python = "3.10.11"
scikit-learn = "^1.3.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
ipykernel = "^6.25.1"
matplotlib = "^3.7.2"
pycodestyle = "^2.11.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
